trunk/Archive2/5a/59f8d6fbb6b9c3/output
main.cpp:3:16: error: non-const static data member must be initialized out of line
    static int member  = 1;
               ^         ~
1 error generated.
